# type-graph

./: .gitignore  README.md  pyproject.toml
src/type_graph/: __main__.py  build.py  cli.py  cluster.py  discover.py  extract.py  infer.py  label.py  llm.py  manifest.py  modules.py  pipeline.py  query.py  render.py  report.py  resolve.py  types_norm.py  update.py
src/type_graph/templates/: graph.html.tmpl
tests/: test_build.py  test_cluster.py  test_discover.py  test_extract.py  test_infer.py  test_label.py  test_manifest.py  test_modules.py  test_pipeline_e2e.py  test_query.py  test_render.py  test_report.py  test_resolve.py  test_types_norm.py  test_update.py
tests/fixtures/sample_repo/: api.py  models.py
